infra/final/infra-develop.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pokecanov-develop
---
apiVersion: v1
kind: Service
metadata:
  name: pokecanov-frontend-svc
  namespace: pokecanov-develop
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: pokecanov-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: pokecanov-svc
  namespace: pokecanov-develop
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: pokecanov
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-flask
  namespace: pokecanov-develop
spec:
  selector:
    matchLabels:
      app: pokecanov
  template:
    metadata:
      labels:
        app: pokecanov
    spec:
      containers:
      - image: candraburhanudin15/pokecanov:1.0.0
        imagePullPolicy: Always
        name: pokecanov
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 1m
            memory: 1Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokecanov-frontend
  namespace: pokecanov-develop
spec:
  selector:
    matchLabels:
      app: pokecanov-frontend
  template:
    metadata:
      labels:
        app: pokecanov-frontend
    spec:
      containers:
      - image: candraburhanudin15/pokecanovfrontend:latest
        imagePullPolicy: Always
        name: pokecanov-frontend
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 1m
            memory: 1Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokecanov-ingress
  namespace: pokecanov-develop
spec:
  ingressClassName: nginx
  rules:
  - host: pokecanov.shamirhusein.my.id
    http:
      paths:
      - backend:
          service:
            name: pokecanov-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: pokecanovfrontend.shamirhusein.my.id
    http:
      paths:
      - backend:
          service:
            name: pokecanov-frontend-svc
            port:
              number: 80
        path: /
        pathType: Prefix
